// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser expression assignment 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 9,
  \\"statements\\": [
    {
      \\"kind\\": 13,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 9,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"name\\": \\"a\\"
      },
      \\"assignment\\": {
        \\"kind\\": 17,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 4,
        \\"width\\": 5,
        \\"value\\": \\"foo\\"
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary AND 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 5,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 5,
      \\"operator\\": \\"and_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 5,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary OR 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 5,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 5,
      \\"operator\\": \\"or_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 5,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary add 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 4,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 4,
      \\"operator\\": \\"plus_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 4,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary divide 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 4,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 4,
      \\"operator\\": \\"divide_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 4,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary equality compare 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 5,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 5,
      \\"operator\\": \\"equality_cmp_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 5,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary exponentiation 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 5,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 5,
      \\"operator\\": \\"exponentiation_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 5,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary greater than 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 4,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 4,
      \\"operator\\": \\"greater_than_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 4,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary greater than equal 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 5,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 5,
      \\"operator\\": \\"greater_than_eql_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 5,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary less than 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 4,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 4,
      \\"operator\\": \\"less_than_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 4,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary less than equal 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 5,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 5,
      \\"operator\\": \\"less_than_eql_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 5,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary modulo 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 4,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 4,
      \\"operator\\": \\"modulo_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 4,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary multiply 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 4,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 4,
      \\"operator\\": \\"multiply_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 4,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary strict compare 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 6,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 6,
      \\"operator\\": \\"strict_cmp_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 6,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation binary subtract 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 4,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 4,
      \\"operator\\": \\"minus_op\\",
      \\"lhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 1,
        \\"value\\": 1
      },
      \\"rhs\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 4,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser expression binary operation complex binary expression 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 20,
  \\"statements\\": [
    {
      \\"kind\\": 15,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 20,
      \\"operator\\": \\"plus_op\\",
      \\"lhs\\": {
        \\"kind\\": 15,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 0,
        \\"width\\": 13,
        \\"operator\\": \\"modulo_op\\",
        \\"lhs\\": {
          \\"kind\\": 15,
          \\"token\\": \\"EXPR\\",
          \\"start\\": 0,
          \\"width\\": 10,
          \\"operator\\": \\"plus_op\\",
          \\"lhs\\": {
            \\"kind\\": 15,
            \\"token\\": \\"EXPR\\",
            \\"start\\": 0,
            \\"width\\": 7,
            \\"operator\\": \\"multiply_op\\",
            \\"lhs\\": {
              \\"kind\\": 15,
              \\"token\\": \\"EXPR\\",
              \\"start\\": 0,
              \\"width\\": 4,
              \\"operator\\": \\"minus_op\\",
              \\"lhs\\": {
                \\"kind\\": 18,
                \\"token\\": \\"EXPR\\",
                \\"start\\": 0,
                \\"width\\": 1,
                \\"value\\": 1
              },
              \\"rhs\\": {
                \\"kind\\": 18,
                \\"token\\": \\"EXPR\\",
                \\"start\\": 4,
                \\"width\\": 1,
                \\"value\\": 1
              }
            },
            \\"rhs\\": {
              \\"kind\\": 18,
              \\"token\\": \\"EXPR\\",
              \\"start\\": 8,
              \\"width\\": 1,
              \\"value\\": 5
            }
          },
          \\"rhs\\": {
            \\"kind\\": 18,
            \\"token\\": \\"EXPR\\",
            \\"start\\": 12,
            \\"width\\": 1,
            \\"value\\": 1
          }
        },
        \\"rhs\\": {
          \\"kind\\": 18,
          \\"token\\": \\"EXPR\\",
          \\"start\\": 16,
          \\"width\\": 1,
          \\"value\\": 3
        }
      },
      \\"rhs\\": {
        \\"kind\\": 15,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 21,
        \\"width\\": 4,
        \\"parenthesized\\": true,
        \\"operator\\": \\"multiply_op\\",
        \\"lhs\\": {
          \\"kind\\": 18,
          \\"token\\": \\"EXPR\\",
          \\"start\\": 21,
          \\"width\\": 1,
          \\"value\\": 2
        },
        \\"rhs\\": {
          \\"kind\\": 18,
          \\"token\\": \\"EXPR\\",
          \\"start\\": 25,
          \\"width\\": 1,
          \\"value\\": 3
        }
      }
    }
  ]
}"
`;

exports[`parser expression call dyadic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 11,
  \\"statements\\": [
    {
      \\"kind\\": 14,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 11,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 0,
        \\"width\\": 5,
        \\"name\\": \\"print\\"
      },
      \\"args\\": [
        {
          \\"kind\\": 18,
          \\"token\\": \\"EXPR\\",
          \\"start\\": 6,
          \\"width\\": 1,
          \\"value\\": 0
        },
        {
          \\"kind\\": 18,
          \\"token\\": \\"ARG_TAIL\\",
          \\"start\\": 9,
          \\"width\\": 1,
          \\"value\\": 0
        }
      ]
    }
  ]
}"
`;

exports[`parser expression call monadic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 8,
  \\"statements\\": [
    {
      \\"kind\\": 14,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 8,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 0,
        \\"width\\": 5,
        \\"name\\": \\"print\\"
      },
      \\"args\\": [
        {
          \\"kind\\": 18,
          \\"token\\": \\"EXPR\\",
          \\"start\\": 6,
          \\"width\\": 1,
          \\"value\\": 0
        }
      ]
    }
  ]
}"
`;

exports[`parser expression call niladic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 7,
  \\"statements\\": [
    {
      \\"kind\\": 14,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 7,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 0,
        \\"width\\": 5,
        \\"name\\": \\"print\\"
      },
      \\"args\\": []
    }
  ]
}"
`;

exports[`parser expression call polyadic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 17,
  \\"statements\\": [
    {
      \\"kind\\": 14,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 17,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 0,
        \\"width\\": 5,
        \\"name\\": \\"print\\"
      },
      \\"args\\": [
        {
          \\"kind\\": 18,
          \\"token\\": \\"EXPR\\",
          \\"start\\": 6,
          \\"width\\": 1,
          \\"value\\": 0
        },
        {
          \\"kind\\": 18,
          \\"token\\": \\"ARG_TAIL\\",
          \\"start\\": 9,
          \\"width\\": 1,
          \\"value\\": 0
        },
        {
          \\"kind\\": 18,
          \\"token\\": \\"ARG_TAIL\\",
          \\"start\\": 12,
          \\"width\\": 1,
          \\"value\\": 0
        },
        {
          \\"kind\\": 18,
          \\"token\\": \\"ARG_TAIL\\",
          \\"start\\": 15,
          \\"width\\": 1,
          \\"value\\": 0
        }
      ]
    }
  ]
}"
`;

exports[`parser expression call triadic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 14,
  \\"statements\\": [
    {
      \\"kind\\": 14,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 14,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 0,
        \\"width\\": 5,
        \\"name\\": \\"print\\"
      },
      \\"args\\": [
        {
          \\"kind\\": 18,
          \\"token\\": \\"EXPR\\",
          \\"start\\": 6,
          \\"width\\": 1,
          \\"value\\": 0
        },
        {
          \\"kind\\": 18,
          \\"token\\": \\"ARG_TAIL\\",
          \\"start\\": 9,
          \\"width\\": 1,
          \\"value\\": 0
        },
        {
          \\"kind\\": 18,
          \\"token\\": \\"ARG_TAIL\\",
          \\"start\\": 12,
          \\"width\\": 1,
          \\"value\\": 0
        }
      ]
    }
  ]
}"
`;

exports[`parser expression function dyadic 1 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 48,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 48,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 17,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 17,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 21,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 24,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 24,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 28,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 32,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 45,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 45,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function dyadic 2 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 48,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 48,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 13,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 13,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 17,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 24,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 24,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 28,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 32,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 45,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 45,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function dyadic immutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 44,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 44,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 13,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 13,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 17,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 20,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 20,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 24,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 28,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 41,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 41,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function dyadic mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 52,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 52,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 17,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 17,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 21,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 28,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 28,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 32,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 36,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 49,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 49,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function function type partially mutable dyadic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 57,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 57,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 13,
          \\"width\\": 25,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 35,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 13,
            \\"width\\": 23,
            \\"parameters\\": [
              {
                \\"kind\\": 4,
                \\"token\\": \\"PARAM\\",
                \\"start\\": 14,
                \\"width\\": 5,
                \\"immutable\\": true,
                \\"type\\": {
                  \\"kind\\": 25,
                  \\"token\\": \\"TYPE\\",
                  \\"start\\": 14,
                  \\"width\\": 3
                },
                \\"identifier\\": {
                  \\"kind\\": 3,
                  \\"token\\": \\"IDEN\\",
                  \\"start\\": 18,
                  \\"width\\": 1,
                  \\"name\\": \\"a\\"
                }
              },
              {
                \\"kind\\": 4,
                \\"token\\": \\"PARAM_TAIL\\",
                \\"start\\": 25,
                \\"width\\": 9,
                \\"immutable\\": false,
                \\"type\\": {
                  \\"kind\\": 25,
                  \\"token\\": \\"TYPE\\",
                  \\"start\\": 25,
                  \\"width\\": 3
                },
                \\"identifier\\": {
                  \\"kind\\": 3,
                  \\"token\\": \\"IDEN\\",
                  \\"start\\": 29,
                  \\"width\\": 1,
                  \\"name\\": \\"b\\"
                }
              }
            ],
            \\"returnType\\": {
              \\"kind\\": 25,
              \\"token\\": \\"TYPE\\",
              \\"start\\": 33,
              \\"width\\": 3
            }
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 37,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 41,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 54,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 54,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function monadic immutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 37,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 37,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 13,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 13,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 17,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 21,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 34,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 34,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function monadic mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 41,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 41,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 17,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 17,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 21,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 25,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 38,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 38,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function niladic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 6,
  \\"width\\": 30,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 6,
      \\"width\\": 30,
      \\"parameters\\": [],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 15,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 27,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 27,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function triadic 1 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 55,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 55,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 17,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 17,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 21,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 24,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 24,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 28,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 31,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 31,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 35,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 39,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 52,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 52,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function triadic 1-2 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 59,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 59,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 17,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 17,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 21,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 28,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 28,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 32,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 35,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 35,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 39,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 43,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 56,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 56,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function triadic 1-3 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 59,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 59,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 17,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 17,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 21,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 24,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 24,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 28,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 35,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 35,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 39,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 43,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 56,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 56,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function triadic 2 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 55,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 55,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 13,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 13,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 17,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 24,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 24,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 28,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 31,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 31,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 35,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 39,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 52,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 52,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function triadic 2-3 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 59,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 59,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 13,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 13,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 17,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 24,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 24,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 28,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 35,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 35,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 39,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 43,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 56,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 56,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function triadic 3 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 55,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 55,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 13,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 13,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 17,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 20,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 20,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 24,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 31,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 31,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 35,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 39,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 52,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 52,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function triadic immutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 51,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 51,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 13,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 13,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 17,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 20,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 20,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 24,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 27,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 27,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 31,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 35,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 48,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 48,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression function triadic mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 63,
  \\"statements\\": [
    {
      \\"kind\\": 12,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 63,
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 17,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 17,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 21,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 28,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 28,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 32,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 39,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 39,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 43,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 47,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 60,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 60,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser expression identifier 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 1,
  \\"statements\\": [
    {
      \\"kind\\": 3,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 1,
      \\"name\\": \\"a\\"
    }
  ]
}"
`;

exports[`parser expression literal float literal 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 3,
  \\"statements\\": [
    {
      \\"kind\\": 19,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 3,
      \\"value\\": 1
    }
  ]
}"
`;

exports[`parser expression literal numeric literal 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 1,
  \\"statements\\": [
    {
      \\"kind\\": 18,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 1,
      \\"value\\": 1
    }
  ]
}"
`;

exports[`parser expression literal string literal 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 7,
  \\"statements\\": [
    {
      \\"kind\\": 17,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 7,
      \\"value\\": \\"hello\\"
    }
  ]
}"
`;

exports[`parser expression parenthesized 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 1,
  \\"width\\": 1,
  \\"statements\\": [
    {
      \\"kind\\": 18,
      \\"token\\": \\"STMT\\",
      \\"start\\": 1,
      \\"width\\": 1,
      \\"parenthesized\\": true,
      \\"value\\": 1
    }
  ]
}"
`;

exports[`parser multi statement three 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 3,
  \\"statements\\": [
    {
      \\"kind\\": 18,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 1,
      \\"value\\": 0
    },
    {
      \\"kind\\": 18,
      \\"token\\": \\"STMT\\",
      \\"start\\": 3,
      \\"width\\": 1,
      \\"value\\": 0
    },
    {
      \\"kind\\": 18,
      \\"token\\": \\"STMT\\",
      \\"start\\": 6,
      \\"width\\": 1,
      \\"value\\": 0
    }
  ]
}"
`;

exports[`parser multi statement two 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 2,
  \\"statements\\": [
    {
      \\"kind\\": 18,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 1,
      \\"value\\": 0
    },
    {
      \\"kind\\": 18,
      \\"token\\": \\"STMT\\",
      \\"start\\": 3,
      \\"width\\": 1,
      \\"value\\": 0
    }
  ]
}"
`;

exports[`parser statement conditional statement if 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 13,
  \\"statements\\": [
    {
      \\"kind\\": 6,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 13,
      \\"condition\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 4,
        \\"width\\": 1,
        \\"value\\": 0
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 9,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 9,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      },
      \\"elseIfStatements\\": []
    }
  ]
}"
`;

exports[`parser statement conditional statement if elif 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 6,
  \\"width\\": 28,
  \\"statements\\": [
    {
      \\"kind\\": 6,
      \\"token\\": \\"STMT\\",
      \\"start\\": 6,
      \\"width\\": 28,
      \\"condition\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 10,
        \\"width\\": 1,
        \\"value\\": 0
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 15,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 15,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      },
      \\"elseIfStatements\\": [
        {
          \\"kind\\": 8,
          \\"token\\": \\"ELIF_STMT\\",
          \\"start\\": 26,
          \\"width\\": 15,
          \\"condition\\": {
            \\"kind\\": 18,
            \\"token\\": \\"EXPR\\",
            \\"start\\": 32,
            \\"width\\": 1,
            \\"value\\": 0
          },
          \\"body\\": {
            \\"kind\\": 1,
            \\"token\\": \\"BLOCK\\",
            \\"start\\": 37,
            \\"width\\": 1,
            \\"statements\\": [
              {
                \\"kind\\": 18,
                \\"token\\": \\"STMT\\",
                \\"start\\": 37,
                \\"width\\": 1,
                \\"value\\": 0
              }
            ]
          }
        }
      ]
    }
  ]
}"
`;

exports[`parser statement conditional statement if elif elif else 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 6,
  \\"width\\": 54,
  \\"statements\\": [
    {
      \\"kind\\": 6,
      \\"token\\": \\"STMT\\",
      \\"start\\": 6,
      \\"width\\": 54,
      \\"condition\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 10,
        \\"width\\": 1,
        \\"value\\": 0
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 15,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 15,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      },
      \\"elseIfStatements\\": [
        {
          \\"kind\\": 8,
          \\"token\\": \\"ELIF_STMT\\",
          \\"start\\": 26,
          \\"width\\": 15,
          \\"condition\\": {
            \\"kind\\": 18,
            \\"token\\": \\"EXPR\\",
            \\"start\\": 32,
            \\"width\\": 1,
            \\"value\\": 0
          },
          \\"body\\": {
            \\"kind\\": 1,
            \\"token\\": \\"BLOCK\\",
            \\"start\\": 37,
            \\"width\\": 1,
            \\"statements\\": [
              {
                \\"kind\\": 18,
                \\"token\\": \\"STMT\\",
                \\"start\\": 37,
                \\"width\\": 1,
                \\"value\\": 0
              }
            ]
          }
        },
        {
          \\"kind\\": 8,
          \\"token\\": \\"ELIF_STMT\\",
          \\"start\\": 47,
          \\"width\\": 15,
          \\"condition\\": {
            \\"kind\\": 18,
            \\"token\\": \\"EXPR\\",
            \\"start\\": 53,
            \\"width\\": 1,
            \\"value\\": 0
          },
          \\"body\\": {
            \\"kind\\": 1,
            \\"token\\": \\"BLOCK\\",
            \\"start\\": 58,
            \\"width\\": 1,
            \\"statements\\": [
              {
                \\"kind\\": 18,
                \\"token\\": \\"STMT\\",
                \\"start\\": 58,
                \\"width\\": 1,
                \\"value\\": 0
              }
            ]
          }
        }
      ],
      \\"elseStatement\\": {
        \\"kind\\": 7,
        \\"token\\": \\"ELSE_STMT\\",
        \\"start\\": 68,
        \\"width\\": 11,
        \\"body\\": {
          \\"kind\\": 1,
          \\"token\\": \\"BLOCK\\",
          \\"start\\": 75,
          \\"width\\": 1,
          \\"statements\\": [
            {
              \\"kind\\": 18,
              \\"token\\": \\"STMT\\",
              \\"start\\": 75,
              \\"width\\": 1,
              \\"value\\": 0
            }
          ]
        }
      }
    }
  ]
}"
`;

exports[`parser statement conditional statement if elif else 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 6,
  \\"width\\": 39,
  \\"statements\\": [
    {
      \\"kind\\": 6,
      \\"token\\": \\"STMT\\",
      \\"start\\": 6,
      \\"width\\": 39,
      \\"condition\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 10,
        \\"width\\": 1,
        \\"value\\": 0
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 15,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 15,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      },
      \\"elseIfStatements\\": [
        {
          \\"kind\\": 8,
          \\"token\\": \\"ELIF_STMT\\",
          \\"start\\": 26,
          \\"width\\": 15,
          \\"condition\\": {
            \\"kind\\": 18,
            \\"token\\": \\"EXPR\\",
            \\"start\\": 32,
            \\"width\\": 1,
            \\"value\\": 0
          },
          \\"body\\": {
            \\"kind\\": 1,
            \\"token\\": \\"BLOCK\\",
            \\"start\\": 37,
            \\"width\\": 1,
            \\"statements\\": [
              {
                \\"kind\\": 18,
                \\"token\\": \\"STMT\\",
                \\"start\\": 37,
                \\"width\\": 1,
                \\"value\\": 0
              }
            ]
          }
        }
      ],
      \\"elseStatement\\": {
        \\"kind\\": 7,
        \\"token\\": \\"ELSE_STMT\\",
        \\"start\\": 47,
        \\"width\\": 11,
        \\"body\\": {
          \\"kind\\": 1,
          \\"token\\": \\"BLOCK\\",
          \\"start\\": 54,
          \\"width\\": 1,
          \\"statements\\": [
            {
              \\"kind\\": 18,
              \\"token\\": \\"STMT\\",
              \\"start\\": 54,
              \\"width\\": 1,
              \\"value\\": 0
            }
          ]
        }
      }
    }
  ]
}"
`;

exports[`parser statement conditional statement if else 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 6,
  \\"width\\": 24,
  \\"statements\\": [
    {
      \\"kind\\": 6,
      \\"token\\": \\"STMT\\",
      \\"start\\": 6,
      \\"width\\": 24,
      \\"condition\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 10,
        \\"width\\": 1,
        \\"value\\": 0
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 15,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 15,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      },
      \\"elseIfStatements\\": [],
      \\"elseStatement\\": {
        \\"kind\\": 7,
        \\"token\\": \\"ELSE_STMT\\",
        \\"start\\": 25,
        \\"width\\": 11,
        \\"body\\": {
          \\"kind\\": 1,
          \\"token\\": \\"BLOCK\\",
          \\"start\\": 32,
          \\"width\\": 1,
          \\"statements\\": [
            {
              \\"kind\\": 18,
              \\"token\\": \\"STMT\\",
              \\"start\\": 32,
              \\"width\\": 1,
              \\"value\\": 0
            }
          ]
        }
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement dyadic 1 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 50,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 50,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 19,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 19,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 23,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 26,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 26,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 30,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 34,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 47,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 47,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement dyadic 2 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 50,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 50,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 15,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 15,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 19,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 26,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 26,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 30,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 34,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 47,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 47,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement dyadic immutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 46,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 46,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 15,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 15,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 19,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 22,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 22,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 26,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 30,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 43,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 43,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement dyadic mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 54,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 54,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 19,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 19,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 23,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 30,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 30,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 34,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 38,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 51,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 51,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement function type partially mutable dyadic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 59,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 59,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 15,
          \\"width\\": 25,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 35,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 15,
            \\"width\\": 23,
            \\"parameters\\": [
              {
                \\"kind\\": 4,
                \\"token\\": \\"PARAM\\",
                \\"start\\": 16,
                \\"width\\": 5,
                \\"immutable\\": true,
                \\"type\\": {
                  \\"kind\\": 25,
                  \\"token\\": \\"TYPE\\",
                  \\"start\\": 16,
                  \\"width\\": 3
                },
                \\"identifier\\": {
                  \\"kind\\": 3,
                  \\"token\\": \\"IDEN\\",
                  \\"start\\": 20,
                  \\"width\\": 1,
                  \\"name\\": \\"a\\"
                }
              },
              {
                \\"kind\\": 4,
                \\"token\\": \\"PARAM_TAIL\\",
                \\"start\\": 27,
                \\"width\\": 9,
                \\"immutable\\": false,
                \\"type\\": {
                  \\"kind\\": 25,
                  \\"token\\": \\"TYPE\\",
                  \\"start\\": 27,
                  \\"width\\": 3
                },
                \\"identifier\\": {
                  \\"kind\\": 3,
                  \\"token\\": \\"IDEN\\",
                  \\"start\\": 31,
                  \\"width\\": 1,
                  \\"name\\": \\"b\\"
                }
              }
            ],
            \\"returnType\\": {
              \\"kind\\": 25,
              \\"token\\": \\"TYPE\\",
              \\"start\\": 35,
              \\"width\\": 3
            }
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 39,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 43,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 56,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 56,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement monadic monadic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 39,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 39,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 15,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 15,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 19,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 23,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 36,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 36,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement monadic mutable monadic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 43,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 43,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 19,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 19,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 23,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 27,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 40,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 40,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement niladic 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 6,
  \\"width\\": 32,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 6,
      \\"width\\": 32,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 11,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 17,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 29,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 29,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement triadic 1 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 57,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 57,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 19,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 19,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 23,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 26,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 26,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 30,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 33,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 33,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 37,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 41,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 54,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 54,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement triadic 1-2 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 61,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 61,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 19,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 19,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 23,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 30,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 30,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 34,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 37,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 37,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 41,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 45,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 58,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 58,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement triadic 1-3 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 61,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 61,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 19,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 19,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 23,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 26,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 26,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 30,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 37,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 37,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 41,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 45,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 58,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 58,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement triadic 2 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 57,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 57,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 15,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 15,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 19,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 26,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 26,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 30,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 33,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 33,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 37,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 41,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 54,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 54,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement triadic 2-3 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 61,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 61,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 15,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 15,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 19,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 26,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 26,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 30,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 37,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 37,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 41,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 45,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 58,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 58,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement triadic 3 mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 57,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 57,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 15,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 15,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 19,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 22,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 22,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 26,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 33,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 33,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 37,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 41,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 54,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 54,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement triadic immutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 53,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 53,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 15,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 15,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 19,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 22,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 22,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 26,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 29,
          \\"width\\": 5,
          \\"immutable\\": true,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 29,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 33,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 37,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 50,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 50,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement function declaration statement triadic mutable 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 7,
  \\"width\\": 65,
  \\"statements\\": [
    {
      \\"kind\\": 11,
      \\"token\\": \\"STMT\\",
      \\"start\\": 7,
      \\"width\\": 65,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 12,
        \\"width\\": 1,
        \\"name\\": \\"z\\"
      },
      \\"parameters\\": [
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM\\",
          \\"start\\": 19,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 19,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 23,
            \\"width\\": 1,
            \\"name\\": \\"a\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 30,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 30,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 34,
            \\"width\\": 1,
            \\"name\\": \\"b\\"
          }
        },
        {
          \\"kind\\": 4,
          \\"token\\": \\"PARAM_TAIL\\",
          \\"start\\": 41,
          \\"width\\": 9,
          \\"immutable\\": false,
          \\"type\\": {
            \\"kind\\": 25,
            \\"token\\": \\"TYPE\\",
            \\"start\\": 41,
            \\"width\\": 3
          },
          \\"identifier\\": {
            \\"kind\\": 3,
            \\"token\\": \\"IDEN\\",
            \\"start\\": 45,
            \\"width\\": 1,
            \\"name\\": \\"c\\"
          }
        }
      ],
      \\"returnType\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 49,
        \\"width\\": 3
      },
      \\"body\\": {
        \\"kind\\": 1,
        \\"token\\": \\"BLOCK\\",
        \\"start\\": 62,
        \\"width\\": 1,
        \\"statements\\": [
          {
            \\"kind\\": 18,
            \\"token\\": \\"STMT\\",
            \\"start\\": 62,
            \\"width\\": 1,
            \\"value\\": 0
          }
        ]
      }
    }
  ]
}"
`;

exports[`parser statement return 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 9,
  \\"statements\\": [
    {
      \\"kind\\": 10,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 9,
      \\"expression\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 7,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser statement variable declaration immutable explicit 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 17,
  \\"statements\\": [
    {
      \\"kind\\": 5,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 17,
      \\"mutable\\": false,
      \\"type\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 9,
        \\"width\\": 3
      },
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 4,
        \\"width\\": 3,
        \\"name\\": \\"foo\\"
      },
      \\"assignment\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 15,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser statement variable declaration immutable inferred 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 12,
  \\"statements\\": [
    {
      \\"kind\\": 5,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 12,
      \\"mutable\\": false,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 4,
        \\"width\\": 3,
        \\"name\\": \\"foo\\"
      },
      \\"assignment\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 10,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser statement variable declaration mutable explicit 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 21,
  \\"statements\\": [
    {
      \\"kind\\": 5,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 21,
      \\"mutable\\": true,
      \\"type\\": {
        \\"kind\\": 25,
        \\"token\\": \\"TYPE\\",
        \\"start\\": 13,
        \\"width\\": 3
      },
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 8,
        \\"width\\": 3,
        \\"name\\": \\"foo\\"
      },
      \\"assignment\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 19,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;

exports[`parser statement variable declaration mutable inferred 1`] = `
"{
  \\"kind\\": 0,
  \\"token\\": \\"PROGRAM\\",
  \\"start\\": 0,
  \\"width\\": 16,
  \\"statements\\": [
    {
      \\"kind\\": 5,
      \\"token\\": \\"STMT\\",
      \\"start\\": 0,
      \\"width\\": 16,
      \\"mutable\\": true,
      \\"name\\": {
        \\"kind\\": 3,
        \\"token\\": \\"IDEN\\",
        \\"start\\": 8,
        \\"width\\": 3,
        \\"name\\": \\"foo\\"
      },
      \\"assignment\\": {
        \\"kind\\": 18,
        \\"token\\": \\"EXPR\\",
        \\"start\\": 14,
        \\"width\\": 1,
        \\"value\\": 1
      }
    }
  ]
}"
`;
